# fantast_football

./: .gitignore  README.md  pyproject.toml
data_injestion/: injestion.py  main.py
injestor/: injestor.py
tests/: test_injestion.py
